correção assinatura pdf

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <div id="splash"><div class="box">Carregando app Flutter…</div></div>
+  <div id="splash"><div class="box">Carregando Ficha Batismal…</div></div>
   <script src="flutter.js" defer></script>
   <script>
     window.addEventListener('load', function() {
